Drag Action is constantly resetting itself to "move" #93331

Closed
opened 2021-11-23 13:43:37 +01:00 by Viacheslav Pushkarev · 9 comments

This bug is observed only in 3.0 and 3.1

Short Description
When Transform tool's Drag is set to "active tool", Drag action is not saved. It gets swithed to "move" every time I switch object interaction mode to "edit mode" or anything else.

Steps to Reproduce

  • Open default blend file
  • Select Transform from toolbar
  • {nav Drag > Active Tool}
  • Change Drag Action to any (eg. rotate)
  • Toggle edit mode then back to object mode
    (Drag Action switched back to Move)

system-info.txt

This bug is observed only in 3.0 and 3.1 **Short Description** When Transform tool's Drag is set to "active tool", Drag action is not saved. It gets swithed to "move" every time I switch object interaction mode to "edit mode" or anything else. **Steps to Reproduce** - Open default blend file - Select `Transform` from toolbar - {nav Drag > Active Tool} - Change `Drag Action` to any (eg. rotate) - Toggle edit mode then back to object mode (`Drag Action` switched back to `Move`) [system-info.txt](https://archive.blender.org/developer/F11892748/system-info.txt)

Added subscriber: @Viacheslav-Pushkarev

Added subscriber: @Viacheslav-Pushkarev

#93738 was marked as duplicate of this issue

#93738 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Culprit commit is possibly 082ddc9379
cc @ideasman42

Culprit commit is possibly 082ddc9379 cc @ideasman42

This issue was referenced by 74611e3555

This issue was referenced by 74611e3555684a22e9a07bd0992a444b571b8083

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-02-23 06:29:09 +01:00
Added subscribers: @Ilya-7, @JulienKaspar, @LalaGhost, @Alex-34, @Cyrill-Vitkovskiy
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93331
No description provided.