Fix T93331: Gizmo tool options reset when switching tools

Drag Action was constantly resetting itself to "move".

Solve this by storing the tool settings per tool and no longer clear
gizmo properties when activating a new tool.